#PK-1643 Update virtual bank transfer labels and localization
Replaced 'BankTransfer' with 'VirtualBankTransfer' and 'EcPayVirtualBankTransfer' in relevant Razor pages. Added corresponding localization entries for both English and Traditional Chinese to support the new labels.

--- a/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
@@ -311,7 +311,7 @@
             <div class="row justify-content-center mb-2">
                 <div class="col-2 text-end">
                     <label class="form-label" for="g-enable-disable-switch"></label>
-                    @L["BankTransfer"]
+                    @L["VirtualBankTransfer"]
                 </div>
                 <div class="col-6">
                     <Switch TValue="bool" id="g-enable-disable-switch" @bind-Checked="EcPay.IsBankTransferEnabled"></Switch>
