#PK-1643 Bank transfer renaming

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -797,7 +797,7 @@
                     <Check TValue="bool"
                     Disabled=@EditGroupBuyDto.IsEnterprise
                     @bind-Checked="@BankTransfer">
-                        @L["BankTransfer"]
+                        @L["EcPayVirtualBankTransfer"]
                     </Check>
                     <Check TValue="bool"
                     Disabled=@EditGroupBuyDto.IsEnterprise
